--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:textFontWeight="32"
+        android:textSize="100mm"
+        android:textColor="@color/teal_200"
         android:text="The results are..." />
 
 
